--- a/search.html
+++ b/search.html
@@ -20,7 +20,7 @@
 		</div>
 		<div class="content">
 			<div class="menu">
-				<h1>Search for Doctor</h1>
+				<h1>Advanced Search for Doctor</h1>
 				<form action = "/search" method = "post">
 					<input type = "text" name = "zip_code" placeholder="Enter Zip Code">
 					<input type = "number" name = "per_page" placeholder="Doctor Profiles Per Page">
